# rpg-recorder

./: .env.example  .gitignore  Makefile  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
bot/: __main__.py  autojoin.py  cog.py  config.py  downmix.py  html_gen.py  pipeline.py  recorder.py  session_index.py  transcribe.py  voice_capture.py
deploy/: rpg-recorder.service
docs/: README.md  ROLES.md  research-plan-b-voice.md  research-tech-stack.md  rpg-recorder-draft.md  task-overview.md
scripts/: deploy.sh  lock_check.sh  lock_upsert.sh  pre-commit.template  test.sh
skills/: code-manager.md  coder.md  command-blocks.md  new-project.md  pm.md  refiner.md  release-manager.md  researcher.md
tasks/code/: RPGREC-002a-project-setup.md  RPGREC-002b-voice-capture.md  RPGREC-002c-chunked-sink.md  RPGREC-002d-slash-commands.md  RPGREC-002t-testing-harness.md  RPGREC-003-post-processing-pipeline.md  RPGREC-003c-html-gen.md  RPGREC-003d-orchestration.md  RPGREC-004-web-ui.md  RPGREC-004b-timeline.md  RPGREC-004c-filter-search.md
tasks/refinement/: RPGREC-001-research-tech-stack.md  RPGREC-002-bot-core.md  RPGREC-002-discord-bot-mvp.md  RPGREC-004-web-ui.md  (+2 more)
templates/: index.html.j2  session.html.j2
tests/: README.md  conftest.py  test_autojoin.py  test_chunked_sink.py  test_cog.py  test_config.py  test_deployment.py  test_downmix.py  test_filter_search.py  test_html_gen.py  test_pipeline.py  test_recording_session.py  test_session_index.py  test_slash_commands.py  test_timeline.py  test_voice_capture.py  test_whisper.py
(+21 files in other folders)
