[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rpg-recorder"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "discord.py[voice]>=2.4.0",
    "discord-ext-voice-recv>=0.4.2a145",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
addopts = [
    "--cov=bot",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "-v",
]

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["bot"]
omit = ["bot/__main__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 0   # Enforced in CI per-diff; locally we just show the number
